<?xml version="1.0"?>
<resources>

    <!-- Main Page -->
    <string name="app_name">WorkMate</string>
    <string name="logo">Logo</string>
    <string name="open">Open</string>
    <string name="close">close</string>
    <string name="app_slogan">Make Life Easier</string>

    <!-- Home Page -->
    <string name="home_welcome">Welcome</string>
    <string name="home_prompt">What service do you need?</string>

    <!-- Search Page -->
    <string name="search_prompt">You are searching for:</string>
    <string name="search_elec">Electrician</string>
    <string name="search_mech">Mechanic</string>
    <string name="search_plum">Plumber</string>
    <string name="search_gard">Gardener</string>
    <string name="search_gen">General</string>
    //Search Spinner starts
    <string-array name="spinnerItems">
        <item>First Name</item>
        <item>Last Name</item>
        <item>Address</item>
        <item>Service</item>
    </string-array>
    //ends here

    <!-- Drawer Titles -->
    <string name="drawer_home">Home</string>
    <string name="drawer_messages">Messages</string>
    <string name="drawer_profile">My Profile</string>
    <string name="drawer_settings">Settings</string>
    <string name="drawer_logout">Log Out</string>
    <string name="drawer_login">Log In/Register</string>

    <!-- Login Page -->
    <string name="welcome">Welcome</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="new_user">New user?</string>
    <string name="register_client">Register - User</string>
    <string name="register_service">Register - Service</string>
    <string name="title_activity_register">Register</string>
    <string name="register_prompt">Register as a user or a service provider</string>

    <!-- Register -->
    <string name="reg_first_name">First name</string>
    <string name="reg_last_name">Last name</string>
    <string name="reg_email">Email</string>
    <string name="reg_email2">Re-enter email</string>
    <string name="reg_phone">Phone</string>
    <string name="address1">Address line 1</string>
    <string name="address2">Address line 2</string>
    <string name="postcode">Postcode</string>
    <string name="profession">Profession</string>
    <string name="proof">Tick box if you have proof of your profession</string>
    <string name="distance">How far you will travel for work (km)</string>
    <string name="password1">Password</string>
    <string name="password2">Re-enter password</string>
    <string name="toc">Agree to terms of services</string>
    <string name="reg_serv_title">Register as service provider</string>
    <string name="reg_client_title">Register as service user</string>
    <string name="logout">Logout</string>

    <!--<string name="forgot_password">Forgot Password</string>-->
    <string name="Avatar">Avatar</string>
    <string name="forgotten_password">Forgotten your password?</string>
    <string name="drawer_search">Search</string>
    <string name="forgot_password">forgot_password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="view_suppliers">View Suppliers</string>
    <string name="viewdata">ViewData</string>
    <string name="search">Search&#8230;</string>
    <string name="drawer_editprofile">Edit Profile</string>
    <string name="title_activity_edit_profile">EditProfile</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="google">google</string>

    <string name="new_message">New Message</string>
    <string name="background">background</string>
    <string name="message_from">This is my message that will wrap into multiple lines and keep on going</string>
    <string name="latest_message">Latest Message</string>
    <string name="username">username</string>
    <string name="enter_message">Enter Message</string>
    <string name="send">Send</string>
    <string name="reset_password">Reset Password</string>
    <string name="edit_profile">Edit Profile</string>

    <string name="title_activity_supplier_profile">SupplierProfileActivity</string>
    <string name="Calender">drawer_calender</string>
    <string name="drawer_calender">Calender</string>
    <string name="title_activity_rate_service">RateService</string>
    <string name="title_activity_review_view">ReviewView</string>

</resources>
