<?xml version="1.0" encoding="utf-8" ?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    >
    <item android:id="@+id/nav_home"
        android:title="@string/drawer_home"
        android:icon="@drawable/ic_action_home"
        />

    <item android:id="@+id/nav_search"
        android:title="@string/drawer_search"
        android:icon="@drawable/ic_action_search"
        />

    <item android:id="@+id/nav_account"
       android:title="@string/drawer_profile"
        android:icon="@drawable/ic_action_name"
        />

    <item android:id="@+id/nav_messages"
        android:title="@string/drawer_messages"
        android:icon="@drawable/ic_action_message"
        />

    <item android:id="@+id/nav_calender"
        android:title="@string/drawer_calender"
        android:icon="@android:drawable/ic_menu_today"
        />

    <item android:id="@+id/nav_settings"
        android:title="@string/drawer_settings"
        android:icon="@drawable/ic_action_settings"
        />

    <item android:id="@+id/nav_login"
        android:title="@string/drawer_login"
        android:icon="@drawable/ic_action_login"
        />

</menu>

