<?xml version="1.0" encoding="UTF-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@color/cardview_dark_background"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/login"
        android:textColor="@color/main_blue"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/etUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/email"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <ImageView
        android:id="@+id/imgUsername"
        android:layout_width="34dp"
        android:layout_height="30dp"
        android:layout_marginEnd="218dp"
        android:contentDescription="@string/email"
        app:layout_constraintBottom_toBottomOf="@+id/etUsername"
        app:layout_constraintEnd_toEndOf="@+id/etUsername"
        app:layout_constraintTop_toTopOf="@+id/etUsername"
        app:srcCompat="@drawable/ic_action_name" />

    <EditText
        android:ems="10"
        android:hint="@string/password"
        android:id="@+id/imgPassword"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_width="wrap_content"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etUsername" />

    <ImageView
        android:id="@+id/etPassword"
        android:layout_width="35dp"
        android:layout_height="30dp"
        android:layout_marginEnd="218dp"
        android:contentDescription="@string/password"
        app:layout_constraintBottom_toBottomOf="@+id/imgPassword"
        app:layout_constraintEnd_toEndOf="@+id/imgPassword"
        app:layout_constraintTop_toTopOf="@+id/imgPassword"
        app:srcCompat="@drawable/ic_action_lock" />

    <TextView
        android:id="@+id/tvForgotPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="18sp"
        android:text="@string/forgotten_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgPassword" />

    <Button
        android:id="@+id/btnLogin1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
<<<<<<< HEAD
        android:layout_marginBottom="272dp"
        android:onClick="loginPage"
        android:text="@string/drawer_login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.547"
        app:layout_constraintStart_toStartOf="parent" />
=======
        android:layout_marginTop="8dp"
        android:text="@string/login"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvForgotPass"
        />

    <TextView
        android:id="@+id/tvNewUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/new_user"
        android:textColor="@color/main_blue"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin1" />

    <TextView
        android:id="@+id/tvPrompt2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_prompt"
        android:textColor="@color/main_blue"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvNewUser" />

    <Button
        android:id="@+id/btnRegisterUser"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_width="192dp"
        android:onClick="client_reg"
        android:text="@string/register_client"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPrompt2" />

    <Button
        android:id="@+id/btnRegisterService"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_width="192dp"
        android:onClick="service_reg"
        android:text="@string/register_service"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnRegisterUser"
        tools:ignore="OnClick" />
>>>>>>> a7f1c6e5b7b743a0546a70d28905858426bbed6d

</androidx.constraintlayout.widget.ConstraintLayout>
